--- a/df2.html
+++ b/df2.html
@@ -18,7 +18,7 @@
       <td>5</td>
       <td>3</td>
       <td>150</td>
-      <td><img src="image/01生命世界/image1.jpeg" width="100" ></td>
+      <td><img src="image/01生命世界/image1.jpeg" height="15...</td>
     </tr>
     <tr>
       <th>1</th>
@@ -27,7 +27,7 @@
       <td>10</td>
       <td>7</td>
       <td>200</td>
-      <td><img src="image/01生命世界/image2.jpeg" width="100" ></td>
+      <td><img src="image/01生命世界/image2.jpeg" height="15...</td>
     </tr>
   </tbody>
 </table>
