--- a/統計.html
+++ b/統計.html
@@ -573,7 +573,7 @@
       <td>18</td>
     </tr>
   </tbody>
-</table><hr><table border="1" class="dataframe">
+</table><hr><p style="page-break-after:always"></p><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th></th>
