update fig and text

--- a/統計.html
+++ b/統計.html
@@ -34,17 +34,17 @@
   <tbody>
     <tr>
       <th>小計</th>
-      <td>47</td>
+      <td>43</td>
       <td>68</td>
       <td>63</td>
-      <td>54</td>
-      <td>31</td>
+      <td>55</td>
+      <td>30</td>
       <td>55</td>
       <td>26</td>
       <td>33</td>
       <td>61</td>
       <td>70</td>
-      <td>6</td>
+      <td>10</td>
       <td>514</td>
     </tr>
     <tr>
@@ -52,8 +52,8 @@
       <td>1</td>
       <td>2</td>
       <td>2</td>
-      <td>0</td>
-      <td>2</td>
+      <td>1</td>
+      <td>1</td>
       <td>1</td>
       <td>1</td>
       <td>1</td>
@@ -64,7 +64,7 @@
     </tr>
     <tr>
       <th>108教育會考</th>
-      <td>2</td>
+      <td>1</td>
       <td>2</td>
       <td>2</td>
       <td>1</td>
@@ -74,7 +74,7 @@
       <td>0</td>
       <td>1</td>
       <td>1</td>
-      <td>0</td>
+      <td>1</td>
       <td>14</td>
     </tr>
     <tr>
@@ -94,7 +94,7 @@
     </tr>
     <tr>
       <th>106教育會考</th>
-      <td>3</td>
+      <td>1</td>
       <td>1</td>
       <td>2</td>
       <td>1</td>
@@ -104,7 +104,7 @@
       <td>1</td>
       <td>1</td>
       <td>2</td>
-      <td>0</td>
+      <td>2</td>
       <td>14</td>
     </tr>
     <tr>
@@ -139,7 +139,7 @@
     </tr>
     <tr>
       <th>103教育會考</th>
-      <td>2</td>
+      <td>1</td>
       <td>1</td>
       <td>2</td>
       <td>2</td>
@@ -149,7 +149,7 @@
       <td>2</td>
       <td>1</td>
       <td>2</td>
-      <td>0</td>
+      <td>1</td>
       <td>14</td>
     </tr>
     <tr>
@@ -578,604 +578,200 @@
     <tr style="text-align: right;">
       <th></th>
       <th></th>
-      <th>概念</th>
+      <th>節</th>
     </tr>
     <tr>
       <th>章</th>
-      <th>概念</th>
+      <th>節</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th rowspan="17" valign="top">01生命世界</th>
-      <th>粒線體與葉綠體</th>
-      <td>7</td>
-    </tr>
-    <tr>
-      <th>物鏡的視野</th>
-      <td>6</td>
-    </tr>
-    <tr>
-      <th>組成層次的類型</th>
-      <td>5</td>
-    </tr>
-    <tr>
-      <th>物鏡的視野與比較</th>
-      <td>4</td>
-    </tr>
-    <tr>
-      <th>器官層次-植物的器官</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>擴散的實驗</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>細胞構造的比較</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>細胞間的比較</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>實驗推論</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>物質交換的方式</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>細胞構造的功能</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>顯微鏡移動方向</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>實驗設計</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>染劑功能</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>製作圖表</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>複式和解剖的視野方向與大小</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>顯微鏡構造</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th rowspan="19" valign="top">02養分</th>
-      <th>光合作用的過程</th>
+      <th rowspan="4" valign="top">01生命世界</th>
+      <th>1顯微鏡</th>
       <td>15</td>
     </tr>
     <tr>
-      <th>酵素的活性</th>
-      <td>10</td>
+      <th>2動植物細胞的比較</th>
+      <td>15</td>
     </tr>
     <tr>
-      <th>熱量計算</th>
-      <td>7</td>
-    </tr>
-    <tr>
-      <th>養分檢驗</th>
-      <td>5</td>
-    </tr>
-    <tr>
-      <th>能進行光合作用的生物種類</th>
-      <td>4</td>
-    </tr>
-    <tr>
-      <th>消化管的功能</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>消化系統綜合性問題</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>消化酵素與受質</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>光合作用的實驗器材</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>消化器官的位置</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>消化液的功能</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>酵素的專一性</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>酵素的成分</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>酵素綜合性問題</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>養分被消化的位置</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>光合作用的原料產物運輸</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>唾液分解澱粉的實驗</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>圖表解讀</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>消化作用的過程</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th rowspan="8" valign="top">03運輸</th>
-      <th>維管束</th>
-      <td>11</td>
-    </tr>
-    <tr>
-      <th>血液</th>
-      <td>11</td>
-    </tr>
-    <tr>
-      <th>植物如何運輸</th>
-      <td>10</td>
-    </tr>
-    <tr>
-      <th>蒸散作用</th>
-      <td>9</td>
-    </tr>
-    <tr>
-      <th>血液循環路徑</th>
-      <td>7</td>
-    </tr>
-    <tr>
-      <th>血管間物質的比較</th>
-      <td>7</td>
-    </tr>
-    <tr>
-      <th>血管</th>
-      <td>6</td>
-    </tr>
-    <tr>
-      <th>淋巴循環系統</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th rowspan="8" valign="top">04協調</th>
-      <th>神經傳遞路徑</th>
-      <td>13</td>
-    </tr>
-    <tr>
-      <th>向性</th>
-      <td>12</td>
-    </tr>
-    <tr>
-      <th>血糖調控</th>
-      <td>9</td>
-    </tr>
-    <tr>
-      <th>中樞與功能</th>
-      <td>5</td>
-    </tr>
-    <tr>
-      <th>內分泌功能</th>
-      <td>5</td>
-    </tr>
-    <tr>
-      <th>神經功能</th>
-      <td>5</td>
-    </tr>
-    <tr>
-      <th>激素的特性</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>神經系統綜合性問題</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th rowspan="9" valign="top">05恆定</th>
-      <th>呼吸運動</th>
-      <td>10</td>
-    </tr>
-    <tr>
-      <th>水分維持恆定的方式</th>
-      <td>4</td>
-    </tr>
-    <tr>
-      <th>內溫外溫的動物種類</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>呼吸作用</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>泌尿系統的功能</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>蛋白質的代謝</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>調節體溫</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>中樞與功能</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>綜合性生理作用的比較</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th rowspan="23" valign="top">06生殖</th>
-      <th>花的構造</th>
-      <td>10</td>
-    </tr>
-    <tr>
-      <th>體細胞和生殖細胞的染色體判斷</th>
-      <td>5</td>
-    </tr>
-    <tr>
-      <th>動物如何進行生殖</th>
-      <td>4</td>
-    </tr>
-    <tr>
-      <th>無性生殖和有性生殖的差異</th>
-      <td>4</td>
-    </tr>
-    <tr>
-      <th>營養器官繁殖</th>
-      <td>4</td>
-    </tr>
-    <tr>
-      <th>分裂時染色體變化</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>細胞分裂的子細胞都相同</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>遺傳差異</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>有性生殖綜合性問題</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>染色體的位置</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>染色體的判斷</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>無性生殖的特性</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>分裂的過程</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>後天產生的性狀無法遺傳給子代</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>染色體的組成</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>染色體綜合性問題</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>減數分裂的過程</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>無性生殖的染色體與基因</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>無性生殖綜合性問題</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>生殖器官的功能</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>生殖方式的判斷</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>細胞分裂進行場所</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>體內體外受精</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th rowspan="10" valign="top">07遺傳</th>
-      <th>計算與分析遺傳機率</th>
-      <td>11</td>
-    </tr>
-    <tr>
-      <th>性染色體的性聯遺傳</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>遺傳疾病</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>性染色體</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>生物複製</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>後天改變的性狀無法遺傳給下一代</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>性別如何決定</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>性別的機率</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>突變綜合性問題</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>體細胞的種類,性染色體決定性別</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th rowspan="4" valign="top">08演化</th>
-      <th>天擇的過程</th>
-      <td>18</td>
-    </tr>
-    <tr>
-      <th>化石判斷地層</th>
-      <td>6</td>
-    </tr>
-    <tr>
-      <th>地質年代的事件</th>
-      <td>6</td>
-    </tr>
-    <tr>
-      <th>人擇</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th rowspan="14" valign="top">09分類</th>
-      <th>植物的特徵</th>
-      <td>12</td>
-    </tr>
-    <tr>
-      <th>被子植物的特徵</th>
-      <td>9</td>
-    </tr>
-    <tr>
-      <th>動物界的特徵</th>
-      <td>7</td>
-    </tr>
-    <tr>
-      <th>學名的使用</th>
-      <td>7</td>
-    </tr>
-    <tr>
-      <th>脊椎動物的特徵</th>
-      <td>7</td>
-    </tr>
-    <tr>
-      <th>蕨類的特徵</th>
-      <td>4</td>
-    </tr>
-    <tr>
-      <th>原核生物的特徵</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>真菌界的生物種類與特徵</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>分類階層的分析</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>昆蟲的特徵</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>節肢動物的特徵</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>哺乳類的特徵</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>檢索表的使用</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>維管束植物有哪些</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th rowspan="31" valign="top">10生態</th>
-      <th>汙染</th>
+      <th>4生物體的組成層次</th>
       <td>8</td>
     </tr>
     <tr>
-      <th>判斷交互關係</th>
+      <th>3物質如何交換</th>
       <td>5</td>
     </tr>
     <tr>
-      <th>從能量塔判斷生物</th>
+      <th rowspan="4" valign="top">02養分</th>
+      <th>3光合作用</th>
+      <td>22</td>
+    </tr>
+    <tr>
+      <th>2酵素</th>
+      <td>17</td>
+    </tr>
+    <tr>
+      <th>4消化系統</th>
+      <td>16</td>
+    </tr>
+    <tr>
+      <th>1養分</th>
+      <td>13</td>
+    </tr>
+    <tr>
+      <th rowspan="2" valign="top">03運輸</th>
+      <th>2循環系統</th>
+      <td>33</td>
+    </tr>
+    <tr>
+      <th>1植物的運輸</th>
+      <td>30</td>
+    </tr>
+    <tr>
+      <th rowspan="3" valign="top">04協調</th>
+      <th>1神經系統</th>
+      <td>26</td>
+    </tr>
+    <tr>
+      <th>2內分泌系統</th>
+      <td>17</td>
+    </tr>
+    <tr>
+      <th>3植物感應</th>
+      <td>12</td>
+    </tr>
+    <tr>
+      <th rowspan="3" valign="top">05恆定</th>
+      <th>2氣體恆定</th>
+      <td>13</td>
+    </tr>
+    <tr>
+      <th>3水分恆定</th>
+      <td>11</td>
+    </tr>
+    <tr>
+      <th>1體溫恆定</th>
+      <td>6</td>
+    </tr>
+    <tr>
+      <th rowspan="5" valign="top">06生殖</th>
+      <th>1細胞分裂與減數分裂</th>
+      <td>24</td>
+    </tr>
+    <tr>
+      <th>2無性生殖</th>
+      <td>12</td>
+    </tr>
+    <tr>
+      <th>5植物有性生殖</th>
+      <td>10</td>
+    </tr>
+    <tr>
+      <th>3動物有性生殖</th>
+      <td>7</td>
+    </tr>
+    <tr>
+      <th>4人類生殖</th>
+      <td>2</td>
+    </tr>
+    <tr>
+      <th rowspan="4" valign="top">07遺傳</th>
+      <th>1遺傳法則</th>
+      <td>11</td>
+    </tr>
+    <tr>
+      <th>2人類的遺傳</th>
+      <td>8</td>
+    </tr>
+    <tr>
+      <th>3突變</th>
       <td>5</td>
     </tr>
     <tr>
-      <th>族群群集</th>
-      <td>4</td>
+      <th>4生物科技</th>
+      <td>2</td>
     </tr>
     <tr>
-      <th>生態系的角色-從食物鏈判斷</th>
-      <td>4</td>
+      <th rowspan="3" valign="top">08演化</th>
+      <th>1天擇與人擇</th>
+      <td>21</td>
     </tr>
     <tr>
-      <th>能量塔的分析</th>
-      <td>4</td>
+      <th>2化石</th>
+      <td>6</td>
     </tr>
     <tr>
-      <th>避免生態失衡的方法</th>
-      <td>4</td>
+      <th>3地質年代</th>
+      <td>6</td>
     </tr>
     <tr>
-      <th>族群大小</th>
+      <th rowspan="5" valign="top">09分類</th>
+      <th>4植物界</th>
+      <td>26</td>
+    </tr>
+    <tr>
+      <th>5動物界</th>
+      <td>19</td>
+    </tr>
+    <tr>
+      <th>1命名與分類</th>
+      <td>10</td>
+    </tr>
+    <tr>
+      <th>2原核生物</th>
       <td>3</td>
     </tr>
     <tr>
-      <th>氮循環的方式</th>
+      <th>3真菌界</th>
       <td>3</td>
     </tr>
     <tr>
-      <th>生態綜合性問題</th>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>食物網的分析</th>
-      <td>3</td>
-    </tr>
-    <tr>
+      <th rowspan="8" valign="top">10生態</th>
       <th>1族群與群集</th>
+      <td>18</td>
+    </tr>
+    <tr>
+      <th>7環境</th>
+      <td>15</td>
+    </tr>
+    <tr>
+      <th>3能量的流動</th>
+      <td>10</td>
+    </tr>
+    <tr>
+      <th>2交互關係</th>
+      <td>9</td>
+    </tr>
+    <tr>
+      <th>4物質的循環</th>
+      <td>6</td>
+    </tr>
+    <tr>
+      <th>5生態</th>
+      <td>5</td>
+    </tr>
+    <tr>
+      <th>6生物多樣性</th>
+      <td>5</td>
+    </tr>
+    <tr>
+      <th>11生態</th>
       <td>2</td>
-    </tr>
-    <tr>
-      <th>生態系平衡的條件</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>生態系的角色-從食物網判斷</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>生物競爭</th>
-      <td>2</td>
-    </tr>
-    <tr>
-      <th>二氧化碳濃度增加的原因</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>分析人口數據</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>判斷生態系的角色-從能量流動關係</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>外來種</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>從食物網預測族群變化</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>從食物網預測生物放大現象</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>捕蟲植物獲得氮的方式</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>推測生物多樣性高的棲地</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>熱對環境的影響</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>物質如何循環</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>生物多樣性的觀念</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>生物放大</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>維持生物多樣性的方法</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>維持生物多樣性的目的</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>解釋族群變化的原因</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>讀圖分析數據</th>
-      <td>1</td>
     </tr>
     <tr>
       <th rowspan="6" valign="top">11其他</th>
-      <th></th>
-      <td>1</td>
+      <th>1科學方法</th>
+      <td>4</td>
     </tr>
     <tr>
-      <th>大氣成分與功能</th>
+      <th>2閱讀測驗</th>
+      <td>2</td>
+    </tr>
+    <tr>
+      <th>氣圈</th>
       <td>1</td>
     </tr>
     <tr>
@@ -1183,15 +779,11 @@
       <td>1</td>
     </tr>
     <tr>
-      <th>科學家與其研究</th>
+      <th>科學史</th>
       <td>1</td>
     </tr>
     <tr>
-      <th>綜合性的路徑</th>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>閱讀測驗</th>
+      <th>綜合</th>
       <td>1</td>
     </tr>
   </tbody>
