--- a/統計_數學_鑑別度.html
+++ b/統計_數學_鑑別度.html
@@ -1,4 +1,4 @@
-<html><head><title>數學通過率</title></head><body><table border="1" class="dataframe">
+<html><head><title>數學鑑別度</title></head><body><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th></th>
