--- a/統計_英語_鑑別度.html
+++ b/統計_英語_鑑別度.html
@@ -1,4 +1,4 @@
-<html><head><title>英語通過率</title></head><body><table border="1" class="dataframe">
+<html><head><title>英語鑑別度</title></head><body><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
       <th></th>
