--- a/統計_生物通過率.html
+++ b/統計_生物通過率.html
@@ -63,6 +63,18 @@
       <td>0.41</td>
     </tr>
     <tr>
+      <th>471</th>
+      <td>若海洋中的食物鏈為：矽藻→浮游動物→小魚→大魚，根據生物所含能量的關係繪製成的金字塔，如附圖所示，則圖中的乙最可能為此食物鏈中的何者？</td>
+      <td>矽藻</td>
+      <td>浮游動物</td>
+      <td>小魚</td>
+      <td>大魚</td>
+      <td>C</td>
+      <td>103教育會考</td>
+      <td>0.84</td>
+      <td>0.38</td>
+    </tr>
+    <tr>
       <th>234</th>
       <td>某動物在不同環境溫度下的體溫變化，如附圖所示。則此動物維持體溫方式的相關敘述，下列何者正確？</td>
       <td>外溫動物，主要藉由代謝產生的熱量維持體溫</td>
@@ -207,6 +219,18 @@
       <td>0.54</td>
     </tr>
     <tr>
+      <th>372</th>
+      <td>阿達發現生活於數百萬年前的原始人類遺跡，其中包含殘缺不全的原始人類骨骼化石，還有用恐龍牙齒化石和象牙所做成的裝飾品。若已知象牙是新生代的大象象牙，則下列對此地原始人類、恐龍、大象之間關係的敘述，何者最合理？</td>
+      <td>恐龍與大象曾經生活在同一年代</td>
+      <td>恐龍是因為原始人類的活動而滅絕</td>
+      <td>原始人類曾經獵捕恐龍以及大象為食</td>
+      <td>原始人類撿到在地層中的恐龍牙齒化石</td>
+      <td>D</td>
+      <td>103教育會考</td>
+      <td>0.73</td>
+      <td>0.42</td>
+    </tr>
+    <tr>
       <th>296</th>
       <td>已知某種動物在同一個體中可產生卵及精子，但在繁殖時，仍需要與不同個體交換精子後，才能受精並產生子代。下列關於此種動物生殖及子代的相關敘述，何者最合理？</td>
       <td>生殖方式屬於無性生殖</td>
@@ -229,6 +253,18 @@
       <td>107教育會考</td>
       <td>0.72</td>
       <td>0.47</td>
+    </tr>
+    <tr>
+      <th>381</th>
+      <td>小喬找到有關「小白鷺、中白鷺、大白鷺」的資料，並整理如表所示。根據此表，成年的小白鷺學名應為下列何者？</td>
+      <td>Ardea alba</td>
+      <td>Egretta alba</td>
+      <td>Egretta garzetta</td>
+      <td>Egretta intermedia</td>
+      <td>C</td>
+      <td>109教育會考</td>
+      <td>0.71</td>
+      <td>0.5</td>
     </tr>
     <tr>
       <th>509</th>
@@ -255,16 +291,28 @@
       <td>0.43</td>
     </tr>
     <tr>
-      <th>381</th>
-      <td>小喬找到有關「小白鷺、中白鷺、大白鷺」的資料，並整理如表所示。根據此表，成年的小白鷺學名應為下列何者？</td>
-      <td>Ardea alba</td>
-      <td>Egretta alba</td>
-      <td>Egretta garzetta</td>
-      <td>Egretta intermedia</td>
-      <td>C</td>
-      <td>109教育會考</td>
+      <th>72</th>
+      <td>將酵素甲和澱粉溶液在試管中混合均勻，並定時測量試管內的澱粉濃度。已知試管內澱粉濃度會隨著時間而改變，如附圖所示，下列關於甲的敘述，何者正確？</td>
+      <td>甲主要由葡萄糖組成</td>
+      <td>甲與澱粉反應後，會被分解成胺基酸</td>
+      <td>若降低甲的活性，會使澱粉的合成速率變快</td>
+      <td>若提高甲的活性，會使澱粉的分解速率變快</td>
+      <td>D</td>
+      <td>107教育會考</td>
       <td>0.71</td>
-      <td>0.5</td>
+      <td>0.54</td>
+    </tr>
+    <tr>
+      <th>507</th>
+      <td>科學家要研究激素對血液中物質濃度的影響，在大白鼠身上分次靜脈注射激素X、Y及Z，並記錄注射前後血液中鈣及葡萄糖的濃度變化。已知每次注射都有足夠的時間間隔，使激素不會彼此干擾。附表為此實驗的平均結果，請根據附表回答下列問題：(mmol/L：毫莫耳/公升)。有關注射上述不同激素前後，大白鼠血液中鈣或葡萄糖濃度變化的圖形，下列何者正確？(□表示注射前；■表示注射後)</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>D</td>
+      <td>103教育會考</td>
+      <td>0.71</td>
+      <td>0.55</td>
     </tr>
     <tr>
       <th>277</th>
@@ -279,16 +327,16 @@
       <td>0.52</td>
     </tr>
     <tr>
-      <th>72</th>
-      <td>將酵素甲和澱粉溶液在試管中混合均勻，並定時測量試管內的澱粉濃度。已知試管內澱粉濃度會隨著時間而改變，如附圖所示，下列關於甲的敘述，何者正確？</td>
-      <td>甲主要由葡萄糖組成</td>
-      <td>甲與澱粉反應後，會被分解成胺基酸</td>
-      <td>若降低甲的活性，會使澱粉的合成速率變快</td>
-      <td>若提高甲的活性，會使澱粉的分解速率變快</td>
-      <td>D</td>
-      <td>107教育會考</td>
-      <td>0.71</td>
-      <td>0.54</td>
+      <th>355</th>
+      <td>某地區棲息著一種蝸牛，不同個體可能具有不同的殼色，但科學家發現此區樹幹上的此種蝸牛多為深咖啡色殼，而草地上則多為淺黃綠色殼。若以天擇說解釋此現象，下列何者最合理？</td>
+      <td>在樹幹上的蝸牛容易突變成深咖啡色殼</td>
+      <td>兩處蝸牛殼色明顯不同是受天敵影響的結果</td>
+      <td>蝸牛個體的殼色是由出生時環境的顏色決定</td>
+      <td>不同殼色的蝸牛在草地上被捕食的機率相等</td>
+      <td>B</td>
+      <td>103教育會考</td>
+      <td>0.7</td>
+      <td>0.38</td>
     </tr>
     <tr>
       <th>88</th>
@@ -301,18 +349,6 @@
       <td>108教育會考</td>
       <td>0.7</td>
       <td>0.51</td>
-    </tr>
-    <tr>
-      <th>360</th>
-      <td>某抗菌肥皂添加物質 X，其目的是要破壞細菌的構造以達到殺菌效果，但專家擔心此產品會加速細菌的演化。若以天擇說解釋專家所擔心的內容，則有關此抗菌肥皂中的物質 X 對人體或細菌的影響，下列何者最合理？</td>
-      <td>使人體產生對細菌的抵抗力</td>
-      <td>篩選出不被物質 X 破壞的細菌</td>
-      <td>使細菌分泌物質 X 以增加存活機會</td>
-      <td>會刺激人體細胞分泌物質 X 以破壞細菌</td>
-      <td>B</td>
-      <td>109教育會考</td>
-      <td>0.69</td>
-      <td>0.59</td>
     </tr>
     <tr>
       <th>323</th>
@@ -339,16 +375,16 @@
       <td>0.37</td>
     </tr>
     <tr>
-      <th>184</th>
-      <td>人們對榴槤的特殊氣味會有不同感受，有些人覺得香，有些人覺得臭，而不同感受主要是由下列哪一部位所產生？</td>
-      <td>鼻子</td>
-      <td>腦幹</td>
-      <td>大腦</td>
-      <td>小腦</td>
-      <td>C</td>
-      <td>108教育會考</td>
-      <td>0.68</td>
-      <td>0.55</td>
+      <th>360</th>
+      <td>某抗菌肥皂添加物質 X，其目的是要破壞細菌的構造以達到殺菌效果，但專家擔心此產品會加速細菌的演化。若以天擇說解釋專家所擔心的內容，則有關此抗菌肥皂中的物質 X 對人體或細菌的影響，下列何者最合理？</td>
+      <td>使人體產生對細菌的抵抗力</td>
+      <td>篩選出不被物質 X 破壞的細菌</td>
+      <td>使細菌分泌物質 X 以增加存活機會</td>
+      <td>會刺激人體細胞分泌物質 X 以破壞細菌</td>
+      <td>B</td>
+      <td>109教育會考</td>
+      <td>0.69</td>
+      <td>0.59</td>
     </tr>
     <tr>
       <th>504</th>
@@ -361,6 +397,18 @@
       <td>106教育會考</td>
       <td>0.68</td>
       <td>0.54</td>
+    </tr>
+    <tr>
+      <th>184</th>
+      <td>人們對榴槤的特殊氣味會有不同感受，有些人覺得香，有些人覺得臭，而不同感受主要是由下列哪一部位所產生？</td>
+      <td>鼻子</td>
+      <td>腦幹</td>
+      <td>大腦</td>
+      <td>小腦</td>
+      <td>C</td>
+      <td>108教育會考</td>
+      <td>0.68</td>
+      <td>0.55</td>
     </tr>
     <tr>
       <th>22</th>
@@ -385,6 +433,42 @@
       <td>106教育會考</td>
       <td>0.67</td>
       <td>0.56</td>
+    </tr>
+    <tr>
+      <th>196</th>
+      <td>小玫聽到電話鈴聲後，趕緊拿起話筒接聽且回答。與上述過程相關的神經系統運作之敘述，下列何者最合理？</td>
+      <td>聽到鈴聲的感覺由耳朵產生</td>
+      <td>回答的語句由腦幹產生</td>
+      <td>拿起話筒的速度由脊髓決定</td>
+      <td>是否接聽電話由大腦決定</td>
+      <td>D</td>
+      <td>103教育會考</td>
+      <td>0.66</td>
+      <td>0.5</td>
+    </tr>
+    <tr>
+      <th>117</th>
+      <td>阿碩要把他家庭院中的樹木移植到別處，他寫下移植樹木時的建議及列出此建議的主要原因，如附表所示，其中下列哪一要點的建議與其主要原因不相符合？</td>
+      <td>甲</td>
+      <td>乙</td>
+      <td>丙</td>
+      <td>丁</td>
+      <td>B</td>
+      <td>103教育會考</td>
+      <td>0.63</td>
+      <td>0.51</td>
+    </tr>
+    <tr>
+      <th>216</th>
+      <td>科學家要研究激素對血液中物質濃度的影響，在大白鼠身上分次靜脈注射激素X、Y及Z，並記錄注射前後血液中鈣及葡萄糖的濃度變化。已知每次注射都有足夠的時間間隔，使激素不會彼此干擾。附表為此實驗的平均結果，請根據附表回答下列問題：(mmol/L：毫莫耳/公升)。此實驗中大白鼠所注射的激素Y最可能為下列何者？</td>
+      <td>副甲狀腺素</td>
+      <td>胰島素</td>
+      <td>升糖素</td>
+      <td>腎上腺素</td>
+      <td>B</td>
+      <td>103教育會考</td>
+      <td>0.63</td>
+      <td>0.5</td>
     </tr>
     <tr>
       <th>29</th>
@@ -423,18 +507,6 @@
       <td>0.5</td>
     </tr>
     <tr>
-      <th>380</th>
-      <td>附表為小慧列出家燕及家雨燕的分類資料，她推論「家燕和家雨燕在分類上為不同科的生物」，依生物分類階層的概念，小慧最可能是根據表中的哪一項內容作出推論？</td>
-      <td>綱</td>
-      <td>目</td>
-      <td>屬</td>
-      <td>種</td>
-      <td>B</td>
-      <td>105教育會考</td>
-      <td>0.6</td>
-      <td>0.55</td>
-    </tr>
-    <tr>
       <th>467</th>
       <td>為某一地區中數種動物及其主要的食物來源,若以能量傳遞的過程判斷，則下列哪一動物族群所含的總能量最少?</td>
       <td>蛇</td>
@@ -445,6 +517,18 @@
       <td>109教育會考</td>
       <td>0.6</td>
       <td>0.62</td>
+    </tr>
+    <tr>
+      <th>380</th>
+      <td>附表為小慧列出家燕及家雨燕的分類資料，她推論「家燕和家雨燕在分類上為不同科的生物」，依生物分類階層的概念，小慧最可能是根據表中的哪一項內容作出推論？</td>
+      <td>綱</td>
+      <td>目</td>
+      <td>屬</td>
+      <td>種</td>
+      <td>B</td>
+      <td>105教育會考</td>
+      <td>0.6</td>
+      <td>0.55</td>
     </tr>
     <tr>
       <th>5</th>
@@ -483,6 +567,18 @@
       <td>0.62</td>
     </tr>
     <tr>
+      <th>271</th>
+      <td>某昆蟲的生長發育過程如附圖所示，甲、乙、丙、丁分別代表不同的時期。若不考慮生殖細胞及突變，比較此昆蟲在不同時期細胞內的染色體數目，下列何者最合理？</td>
+      <td>四個時期都相同</td>
+      <td>四個時期都不同</td>
+      <td>除了甲外，其餘三個時期都相同</td>
+      <td>除了丙外，其餘三個時期都相同</td>
+      <td>A</td>
+      <td>103教育會考</td>
+      <td>0.59</td>
+      <td>0.53</td>
+    </tr>
+    <tr>
       <th>199</th>
       <td>小湘在街上看到久違的好朋友，興奮地立即揮手打招呼。下列與上述過程相關的神經系統運作之敘述，何者正確？</td>
       <td>立即揮手是屬於反射作用</td>
@@ -493,18 +589,6 @@
       <td>107教育會考</td>
       <td>0.59</td>
       <td>0.49</td>
-    </tr>
-    <tr>
-      <th>198</th>
-      <td>一般人手指觸電後會立刻縮手，也會感覺疼痛而趕緊甩手。附圖為人體指尖觸電時神經訊息傳導的示意圖，圖中甲、乙、丙分別為訊息傳導所經過的神經，下列有關此訊息傳導路徑相關敘述與所對應的神經之配對，何者最合理？</td>
-      <td>觸電後立刻縮手—甲、乙</td>
-      <td>觸電後感覺疼痛—乙、丙</td>
-      <td>受器接受刺激後傳至中樞神經—乙、丙</td>
-      <td>中樞神經發出甩手的命令後傳至動器—丙、甲</td>
-      <td>A</td>
-      <td>106教育會考</td>
-      <td>0.58</td>
-      <td>0.56</td>
     </tr>
     <tr>
       <th>118</th>
@@ -519,6 +603,18 @@
       <td>0.62</td>
     </tr>
     <tr>
+      <th>198</th>
+      <td>一般人手指觸電後會立刻縮手，也會感覺疼痛而趕緊甩手。附圖為人體指尖觸電時神經訊息傳導的示意圖，圖中甲、乙、丙分別為訊息傳導所經過的神經，下列有關此訊息傳導路徑相關敘述與所對應的神經之配對，何者最合理？</td>
+      <td>觸電後立刻縮手—甲、乙</td>
+      <td>觸電後感覺疼痛—乙、丙</td>
+      <td>受器接受刺激後傳至中樞神經—乙、丙</td>
+      <td>中樞神經發出甩手的命令後傳至動器—丙、甲</td>
+      <td>A</td>
+      <td>106教育會考</td>
+      <td>0.58</td>
+      <td>0.56</td>
+    </tr>
+    <tr>
       <th>151</th>
       <td>某病患被細菌感染而引發肺炎，經檢查後證實為肺炎鏈球菌感染，以甲、乙、丙代表人體內的三種血球，表為此病患檢驗結果及正常成年人血球數量統計資料的比較，結果顯示此病患體內對抗病原菌的某種血球數量有異常增加的現象。已知紅血球為血液中數量最多的血球，根據本文，關於甲、乙、丙的推論，下列何者正確？</td>
       <td>甲:血小板，乙:白血球，丙:紅血球</td>
@@ -529,18 +625,6 @@
       <td>109教育會考</td>
       <td>0.56</td>
       <td>0.51</td>
-    </tr>
-    <tr>
-      <th>158</th>
-      <td>附圖是人體心臟及其所連接的血管之示意圖，甲、乙為心臟右邊的腔室，丙、丁為心臟左邊的腔室。腦細胞的代謝廢物進入血液循環後，會最先到達圖中的哪一腔室？</td>
-      <td>甲</td>
-      <td>乙</td>
-      <td>丙</td>
-      <td>丁</td>
-      <td>A</td>
-      <td>108教育會考</td>
-      <td>0.55</td>
-      <td>0.5</td>
     </tr>
     <tr>
       <th>197</th>
@@ -555,6 +639,18 @@
       <td>0.58</td>
     </tr>
     <tr>
+      <th>158</th>
+      <td>附圖是人體心臟及其所連接的血管之示意圖，甲、乙為心臟右邊的腔室，丙、丁為心臟左邊的腔室。腦細胞的代謝廢物進入血液循環後，會最先到達圖中的哪一腔室？</td>
+      <td>甲</td>
+      <td>乙</td>
+      <td>丙</td>
+      <td>丁</td>
+      <td>A</td>
+      <td>108教育會考</td>
+      <td>0.55</td>
+      <td>0.5</td>
+    </tr>
+    <tr>
       <th>100</th>
       <td>附圖為人體部分消化器官的示意圖，若老王體內的甲處發生阻塞，則下列關於他的消化及養分吸收功能，何者最可能發生？</td>
       <td>胰液無法排至小腸內</td>
@@ -565,18 +661,6 @@
       <td>106教育會考</td>
       <td>0.54</td>
       <td>0.55</td>
-    </tr>
-    <tr>
-      <th>173</th>
-      <td>附圖為人體血液循環和淋巴循環的部分示意圖，甲、乙和丙為不同的管道名稱，圖中代表液體的流動方向，代表物質由微血管滲出。根據此圖判斷，甲、乙和丙內有無紅血球的敘述，何者最合理？</td>
-      <td>僅甲、乙有</td>
-      <td>僅甲、丙有</td>
-      <td>甲、乙、丙皆有</td>
-      <td>甲、乙、丙皆沒有</td>
-      <td>B</td>
-      <td>105教育會考</td>
-      <td>0.54</td>
-      <td>0.42</td>
     </tr>
     <tr>
       <th>138</th>
@@ -591,6 +675,18 @@
       <td>0.61</td>
     </tr>
     <tr>
+      <th>173</th>
+      <td>附圖為人體血液循環和淋巴循環的部分示意圖，甲、乙和丙為不同的管道名稱，圖中代表液體的流動方向，代表物質由微血管滲出。根據此圖判斷，甲、乙和丙內有無紅血球的敘述，何者最合理？</td>
+      <td>僅甲、乙有</td>
+      <td>僅甲、丙有</td>
+      <td>甲、乙、丙皆有</td>
+      <td>甲、乙、丙皆沒有</td>
+      <td>B</td>
+      <td>105教育會考</td>
+      <td>0.54</td>
+      <td>0.42</td>
+    </tr>
+    <tr>
       <th>9</th>
       <td>如附圖所示，甲、乙為一臺複式顯微鏡上兩種不同倍率的物鏡。小閔使用此顯微鏡觀察口腔皮膜細胞，他按照使用顯微鏡的標準步驟依序開始操作，有關物鏡的轉換及視野亮度的變化，下列敘述何者最合理？</td>
       <td>先用甲再轉換到乙，視野亮度變暗</td>
@@ -603,16 +699,16 @@
       <td>0.55</td>
     </tr>
     <tr>
-      <th>11</th>
-      <td>某生使用放大倍率為 40 倍的解剖顯微鏡觀察某一圖形，視野下如圖所示。在不轉動圖形的情況下，若改以目鏡 10X、物鏡 4X的複式顯微鏡觀察，下列何者最可能是在該倍率的複式顯微鏡視野下觀察到的圖形？</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>D</td>
-      <td>109教育會考</td>
-      <td>0.52</td>
-      <td>0.49</td>
+      <th>156</th>
+      <td>附圖是人體血液循環所流經的部分構造示意圖，圖中的乙為心臟，丁為肝臟。根據附圖，若只考慮甲、乙、丙、丁四構造，將血液從丁流到丙所經過的構造都依序列出，則下列何者正確？</td>
+      <td>丁→乙→丙</td>
+      <td>丁→甲→丙</td>
+      <td>丁→乙→甲→乙→丙</td>
+      <td>丁→甲→乙→甲→丙</td>
+      <td>C</td>
+      <td>103教育會考</td>
+      <td>0.53</td>
+      <td>0.4</td>
     </tr>
     <tr>
       <th>286</th>
@@ -627,15 +723,15 @@
       <td>0.49</td>
     </tr>
     <tr>
-      <th>313</th>
-      <td>自花授粉是指植物的花粉黏附在同一朵花的雌蕊柱頭上。關於植物以自花授粉的方式生殖，下列何者最合理？</td>
-      <td>屬於有性生殖</td>
-      <td>不會產生果實</td>
-      <td>子代不具有繁殖能力</td>
-      <td>子代與親代的性狀皆完全相同</td>
-      <td>A</td>
+      <th>11</th>
+      <td>某生使用放大倍率為 40 倍的解剖顯微鏡觀察某一圖形，視野下如圖所示。在不轉動圖形的情況下，若改以目鏡 10X、物鏡 4X的複式顯微鏡觀察，下列何者最可能是在該倍率的複式顯微鏡視野下觀察到的圖形？</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>D</td>
       <td>109教育會考</td>
-      <td>0.51</td>
+      <td>0.52</td>
       <td>0.49</td>
     </tr>
     <tr>
@@ -663,28 +759,28 @@
       <td>0.59</td>
     </tr>
     <tr>
-      <th>320</th>
-      <td>已知水稻中某種特殊香味的性狀是由一對等位基因所控制，包含具此香味和不具此香味兩種特徵。某研究人員將皆不具此香味的水稻甲和乙進行授粉，其子代水稻丙不具有此香味，而子代水稻丁具有此香味。在不考慮突變的情況下，根據遺傳法則推測水稻甲、乙、丙及丁的基因型，下列何者無法確定？</td>
-      <td>甲</td>
-      <td>乙</td>
-      <td>丙</td>
-      <td>丁</td>
-      <td>C</td>
-      <td>104教育會考</td>
-      <td>0.5</td>
-      <td>0.43</td>
+      <th>313</th>
+      <td>自花授粉是指植物的花粉黏附在同一朵花的雌蕊柱頭上。關於植物以自花授粉的方式生殖，下列何者最合理？</td>
+      <td>屬於有性生殖</td>
+      <td>不會產生果實</td>
+      <td>子代不具有繁殖能力</td>
+      <td>子代與親代的性狀皆完全相同</td>
+      <td>A</td>
+      <td>109教育會考</td>
+      <td>0.51</td>
+      <td>0.49</td>
     </tr>
     <tr>
-      <th>312</th>
-      <td>附圖為向日葵植株與南瓜植株的雌蕊構造示意圖，已知向日葵的甲部位可發育成一個帶殼葵瓜子，南瓜的乙構造可發育成一個帶殼南瓜子，有關此兩種帶殼的瓜子為果實或種子之敘述，下列何者正確？</td>
-      <td>兩者皆為果實</td>
-      <td>兩者皆為種子</td>
-      <td>葵瓜子為果實，南瓜子為種子</td>
-      <td>葵瓜子為種子，南瓜子為果實</td>
+      <th>94</th>
+      <td>有四支透明且密閉的試管，分別培養草履蟲、酵母菌、藍綠菌和大腸桿菌，已知此四支試管內皆含CO2，但不含有機物，其他環境條件則皆適合上述生物的生存。在每日各12小時光照黑暗交替的情況下，下列哪種生物最可能在其試管內生長及繁衍子代？(大腸桿菌為細菌的一種)</td>
+      <td>草履蟲</td>
+      <td>酵母菌</td>
+      <td>藍綠菌</td>
+      <td>大腸桿菌</td>
       <td>C</td>
-      <td>105教育會考</td>
+      <td>103教育會考</td>
       <td>0.5</td>
-      <td>0.4</td>
+      <td>0.48</td>
     </tr>
     <tr>
       <th>331</th>
@@ -699,6 +795,30 @@
       <td>0.44</td>
     </tr>
     <tr>
+      <th>312</th>
+      <td>附圖為向日葵植株與南瓜植株的雌蕊構造示意圖，已知向日葵的甲部位可發育成一個帶殼葵瓜子，南瓜的乙構造可發育成一個帶殼南瓜子，有關此兩種帶殼的瓜子為果實或種子之敘述，下列何者正確？</td>
+      <td>兩者皆為果實</td>
+      <td>兩者皆為種子</td>
+      <td>葵瓜子為果實，南瓜子為種子</td>
+      <td>葵瓜子為種子，南瓜子為果實</td>
+      <td>C</td>
+      <td>105教育會考</td>
+      <td>0.5</td>
+      <td>0.4</td>
+    </tr>
+    <tr>
+      <th>320</th>
+      <td>已知水稻中某種特殊香味的性狀是由一對等位基因所控制，包含具此香味和不具此香味兩種特徵。某研究人員將皆不具此香味的水稻甲和乙進行授粉，其子代水稻丙不具有此香味，而子代水稻丁具有此香味。在不考慮突變的情況下，根據遺傳法則推測水稻甲、乙、丙及丁的基因型，下列何者無法確定？</td>
+      <td>甲</td>
+      <td>乙</td>
+      <td>丙</td>
+      <td>丁</td>
+      <td>C</td>
+      <td>104教育會考</td>
+      <td>0.5</td>
+      <td>0.43</td>
+    </tr>
+    <tr>
       <th>119</th>
       <td>附圖為維管束植物體內物質流向的示意圖，甲為維管束內運輸物質的管道，乙為此種管道內主要的運送物質，箭頭表示乙物質在不同時間點於管道內可能的流動方向。下列有關甲和乙的敘述，何者最合理？</td>
       <td>甲位在木質部，乙為醣類</td>
@@ -709,30 +829,6 @@
       <td>108教育會考</td>
       <td>0.48</td>
       <td>0.5</td>
-    </tr>
-    <tr>
-      <th>385</th>
-      <td>某病患被細菌感染而引發肺炎，經檢查後證實為肺炎鏈球菌感染。根據本文，肺炎鏈球菌不具有下列何者？</td>
-      <td>DNA</td>
-      <td>細胞質</td>
-      <td>細胞膜</td>
-      <td>細胞核</td>
-      <td>D</td>
-      <td>109教育會考</td>
-      <td>0.47</td>
-      <td>0.52</td>
-    </tr>
-    <tr>
-      <th>472</th>
-      <td>將某一食物鏈中生產者及不同階層的消費者所含之總能量繪製成圖，如附圖所示。已知此食物鏈中有一種僅以種子為食的鳥類，則此種鳥類應屬於下列哪一階層？</td>
-      <td>甲</td>
-      <td>乙</td>
-      <td>丙</td>
-      <td>丁</td>
-      <td>C</td>
-      <td>106教育會考</td>
-      <td>0.47</td>
-      <td>0.55</td>
     </tr>
     <tr>
       <th>259</th>
@@ -747,6 +843,30 @@
       <td>0.54</td>
     </tr>
     <tr>
+      <th>472</th>
+      <td>將某一食物鏈中生產者及不同階層的消費者所含之總能量繪製成圖，如附圖所示。已知此食物鏈中有一種僅以種子為食的鳥類，則此種鳥類應屬於下列哪一階層？</td>
+      <td>甲</td>
+      <td>乙</td>
+      <td>丙</td>
+      <td>丁</td>
+      <td>C</td>
+      <td>106教育會考</td>
+      <td>0.47</td>
+      <td>0.55</td>
+    </tr>
+    <tr>
+      <th>385</th>
+      <td>某病患被細菌感染而引發肺炎，經檢查後證實為肺炎鏈球菌感染。根據本文，肺炎鏈球菌不具有下列何者？</td>
+      <td>DNA</td>
+      <td>細胞質</td>
+      <td>細胞膜</td>
+      <td>細胞核</td>
+      <td>D</td>
+      <td>109教育會考</td>
+      <td>0.47</td>
+      <td>0.52</td>
+    </tr>
+    <tr>
       <th>170</th>
       <td>附圖為人體內甲、乙兩種器官各自的動脈及靜脈血液中氧氣含量之示意圖。根據此圖推測，紅血球從獲得氧氣到釋出氧氣的運輸過程中，有關血液流經甲、乙及心臟的途徑，下列何者最合理？</td>
       <td>甲→心臟→乙</td>
@@ -759,16 +879,28 @@
       <td>0.39</td>
     </tr>
     <tr>
-      <th>157</th>
-      <td>附圖為人體注射藥劑的部位示意圖，關於藥劑從甲部位或乙部位注入人體的靜脈後，經由血液循環最先進入心臟腔室的敘述，下列何者最合理？</td>
-      <td>甲、乙部位的藥劑皆先進入右心房</td>
-      <td>甲、乙部位的藥劑皆先進入左心房</td>
-      <td>甲部位的藥劑先進入右心房，乙部位的藥劑先進入左心房</td>
-      <td>甲部位的藥劑先進入左心房，乙部位的藥劑先進入右心房</td>
-      <td>A</td>
-      <td>107教育會考</td>
+      <th>451</th>
+      <td>附表為某校生態系列演講的日期及主題。小雅對生物群集(群落)的議題有興趣，若他只能參加兩場演講，則應優先選擇哪兩日期？櫻花鉤吻鮭又稱臺灣鱒</td>
+      <td>8日、15日</td>
+      <td>8日、22日</td>
+      <td>15日、29日</td>
+      <td>22日、29日</td>
+      <td>C</td>
+      <td>103教育會考</td>
+      <td>0.46</td>
+      <td>0.44</td>
+    </tr>
+    <tr>
+      <th>406</th>
+      <td>某研究機構估計出臺灣各類別的植物物種數量百分比，如附表所示。根據此表分析，下列何者所涵蓋的物種數量百分比最合理？</td>
+      <td>雙子葉植物占61.5%</td>
+      <td>不會開花的植物占38.5%</td>
+      <td>沒有維管束的植物占37.0%</td>
+      <td>可產生果實的植物占63.0%</td>
+      <td>B</td>
+      <td>103教育會考</td>
       <td>0.45</td>
-      <td>0.57</td>
+      <td>0.46</td>
     </tr>
     <tr>
       <th>332</th>
@@ -781,6 +913,18 @@
       <td>108教育會考</td>
       <td>0.45</td>
       <td>0.43</td>
+    </tr>
+    <tr>
+      <th>157</th>
+      <td>附圖為人體注射藥劑的部位示意圖，關於藥劑從甲部位或乙部位注入人體的靜脈後，經由血液循環最先進入心臟腔室的敘述，下列何者最合理？</td>
+      <td>甲、乙部位的藥劑皆先進入右心房</td>
+      <td>甲、乙部位的藥劑皆先進入左心房</td>
+      <td>甲部位的藥劑先進入右心房，乙部位的藥劑先進入左心房</td>
+      <td>甲部位的藥劑先進入左心房，乙部位的藥劑先進入右心房</td>
+      <td>A</td>
+      <td>107教育會考</td>
+      <td>0.45</td>
+      <td>0.57</td>
     </tr>
     <tr>
       <th>67</th>
@@ -843,16 +987,16 @@
       <td>0.67</td>
     </tr>
     <tr>
-      <th>322</th>
-      <td>某一性狀由體染色體上的一對等位基因所控制，A為顯性，a為隱性。今有一對夫妻此性狀的基因型皆為Aa，在不考慮突變的情況下，他們小孩的此種性狀可能會有幾種表現型？</td>
-      <td>1</td>
-      <td>2</td>
-      <td>3</td>
-      <td>4</td>
+      <th>466</th>
+      <td>附圖為某兩條食物鏈依生物各階層所含能量的關係繪製成甲、乙能量塔之示意圖(面積不代表實際能量大小)。已知兩能量塔最高階層的生物總能量皆相同，則下列推測何者最合理？</td>
+      <td>消費者的總能量：甲＞乙</td>
+      <td>生產者的總能量：乙＞甲</td>
+      <td>甲的初級消費者總能量大於乙的初級消費者</td>
+      <td>甲的初級消費者總能量小於乙的三級消費者</td>
       <td>B</td>
       <td>107教育會考</td>
       <td>0.4</td>
-      <td>0.32</td>
+      <td>0.46</td>
     </tr>
     <tr>
       <th>171</th>
@@ -867,16 +1011,16 @@
       <td>0.43</td>
     </tr>
     <tr>
-      <th>466</th>
-      <td>附圖為某兩條食物鏈依生物各階層所含能量的關係繪製成甲、乙能量塔之示意圖(面積不代表實際能量大小)。已知兩能量塔最高階層的生物總能量皆相同，則下列推測何者最合理？</td>
-      <td>消費者的總能量：甲＞乙</td>
-      <td>生產者的總能量：乙＞甲</td>
-      <td>甲的初級消費者總能量大於乙的初級消費者</td>
-      <td>甲的初級消費者總能量小於乙的三級消費者</td>
+      <th>322</th>
+      <td>某一性狀由體染色體上的一對等位基因所控制，A為顯性，a為隱性。今有一對夫妻此性狀的基因型皆為Aa，在不考慮突變的情況下，他們小孩的此種性狀可能會有幾種表現型？</td>
+      <td>1</td>
+      <td>2</td>
+      <td>3</td>
+      <td>4</td>
       <td>B</td>
       <td>107教育會考</td>
       <td>0.4</td>
-      <td>0.46</td>
+      <td>0.32</td>
     </tr>
     <tr>
       <th>431</th>
@@ -963,6 +1107,18 @@
       <td>0.55</td>
     </tr>
     <tr>
+      <th>329</th>
+      <td>若王先生的X染色體上具有某一隱性等位基因，在不考慮突變的情況下，則其子女的哪種細胞也必定都有此隱性等位基因？</td>
+      <td>兒子的精細胞</td>
+      <td>女兒的卵細胞</td>
+      <td>兒子的肌肉細胞</td>
+      <td>女兒的肌肉細胞</td>
+      <td>D</td>
+      <td>103教育會考</td>
+      <td>0.3</td>
+      <td>0.57</td>
+    </tr>
+    <tr>
       <th>408</th>
       <td>附圖為銀杏(學名：Ginkgo biloba)的示意圖，已知銀杏屬於裸子植物，其種子俗稱為白果，白果及銀杏葉可用於食用及環境美化。下列關於銀杏的推論，何者正確？</td>
       <td>Ginkgo為形容詞</td>
@@ -985,6 +1141,18 @@
       <td>107教育會考</td>
       <td>0.27</td>
       <td>0.5</td>
+    </tr>
+    <tr>
+      <th>27</th>
+      <td>已知某株植物具有根、莖、葉等營養器官，也具有花、果實、種子等生殖器官。上述哪些器官的細胞具有分解葡萄糖以產生能量的功能？</td>
+      <td>僅營養器官才有</td>
+      <td>僅生殖器官才有</td>
+      <td>所有器官皆具有</td>
+      <td>除葉以外的器官皆具有</td>
+      <td>C</td>
+      <td>103教育會考</td>
+      <td>0.26</td>
+      <td>0.43</td>
     </tr>
     <tr>
       <th>477</th>
