update image size

--- a/統計.html
+++ b/統計.html
@@ -36,14 +36,14 @@
       <th>小計</th>
       <td>43</td>
       <td>69</td>
-      <td>63</td>
+      <td>62</td>
       <td>55</td>
-      <td>30</td>
+      <td>31</td>
       <td>55</td>
       <td>27</td>
-      <td>33</td>
+      <td>35</td>
       <td>61</td>
-      <td>70</td>
+      <td>68</td>
       <td>10</td>
       <td>516</td>
     </tr>
@@ -96,9 +96,9 @@
       <th>106教育會考</th>
       <td>1</td>
       <td>1</td>
-      <td>2</td>
       <td>1</td>
-      <td>0</td>
+      <td>1</td>
+      <td>1</td>
       <td>2</td>
       <td>1</td>
       <td>1</td>
@@ -236,9 +236,9 @@
       <td>0</td>
       <td>2</td>
       <td>0</td>
-      <td>2</td>
-      <td>1</td>
       <td>3</td>
+      <td>1</td>
+      <td>2</td>
       <td>0</td>
       <td>15</td>
     </tr>
@@ -446,9 +446,9 @@
       <td>1</td>
       <td>1</td>
       <td>2</td>
-      <td>1</td>
       <td>2</td>
-      <td>3</td>
+      <td>2</td>
+      <td>2</td>
       <td>0</td>
       <td>17</td>
     </tr>
@@ -624,7 +624,7 @@
     <tr>
       <th rowspan="2" valign="top">03運輸</th>
       <th>2循環系統</th>
-      <td>33</td>
+      <td>32</td>
     </tr>
     <tr>
       <th>1植物的運輸</th>
@@ -650,7 +650,7 @@
     </tr>
     <tr>
       <th>3水分恆定</th>
-      <td>11</td>
+      <td>12</td>
     </tr>
     <tr>
       <th>1體溫恆定</th>
@@ -695,7 +695,7 @@
       <td>2</td>
     </tr>
     <tr>
-      <th rowspan="3" valign="top">08演化</th>
+      <th rowspan="4" valign="top">08演化</th>
       <th>1天擇與人擇</th>
       <td>21</td>
     </tr>
@@ -706,6 +706,10 @@
     <tr>
       <th>3地質年代</th>
       <td>6</td>
+    </tr>
+    <tr>
+      <th>2交互關係</th>
+      <td>2</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">09分類</th>
@@ -743,7 +747,7 @@
     </tr>
     <tr>
       <th>2交互關係</th>
-      <td>9</td>
+      <td>7</td>
     </tr>
     <tr>
       <th>4物質的循環</th>
